Improved Canbus Logger